// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link can be displayed with the default styles 1`] = `
Object {
  "link": .c0:focus {
  outline: auto 5px -webkit-focus-ring-color;
}

.c0:link,
.c0:visited {
  color: #2a2c2e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  background-color: #d8d8d8;
  border-radius: 0.25rem;
  padding: 0.125rem;
  margin: -0.125rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  border: 0.125rem solid #71757b;
  padding: 0.125rem;
  margin: -0.25rem;
  border-radius: 0.25rem;
  outline: none;
}

<a
    className="c0"
    href={null}
    to={null}
  >
    Some content
  </a>,
  "wrapper": .c0:focus {
  outline: auto 5px -webkit-focus-ring-color;
}

.c0:link,
.c0:visited {
  color: #2a2c2e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  background-color: #d8d8d8;
  border-radius: 0.25rem;
  padding: 0.125rem;
  margin: -0.125rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  border: 0.125rem solid #71757b;
  padding: 0.125rem;
  margin: -0.25rem;
  border-radius: 0.25rem;
  outline: none;
}

<WithForwardedRef(Link)>
    <Link
      forwardedRef={null}
      href={null}
      iconPosition="left"
      reactRouterLinkComponent={null}
      to={null}
    >
      <Link__StyledLink
        as="a"
        context={
          Object {
            "inheritColor": undefined,
          }
        }
        hasIcon={false}
        href={null}
        to={null}
      >
        <StyledComponent
          as="a"
          context={
            Object {
              "inheritColor": undefined,
            }
          }
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "Link__StyledLink-sc-1bokult-0",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  ":focus {",
                  "outline: auto 5px -webkit-focus-ring-color;",
                  "}",
                  "&:link,&:visited {",
                  "color: #2a2c2e;",
                  "text-decoration: underline;",
                  "}",
                  "&:hover {",
                  "text-decoration: none;",
                  "}",
                  "& svg {",
                  "}",
                  [Function],
                  [Function],
                  [Function],
                ],
              },
              "displayName": "Link__StyledLink",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "Link__StyledLink-sc-1bokult-0",
              "target": "a",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          hasIcon={false}
          href={null}
          to={null}
        >
          <a
            className="c0"
            href={null}
            to={null}
          >
            Some content
          </a>
        </StyledComponent>
      </Link__StyledLink>
    </Link>
  </WithForwardedRef(Link)>,
}
`;

exports[`Link can be inverted 1`] = `
Object {
  "link": .c0:focus {
  outline: auto 5px -webkit-focus-ring-color;
}

.c0:link,
.c0:visited {
  color: #2a2c2e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:link,
.c0:visited {
  color: #fff;
}

.c0:active {
  color: #d8d8d8;
  background-color: rgba(0,0,0,0.4);
  border-radius: 0.25rem;
  padding: 0.125rem;
  margin: -0.125rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  border: 0.125rem solid #fff;
  padding: 0.125rem;
  margin: -0.25rem;
  border-radius: 0.25rem;
  outline: none;
}

<a
    className="c0"
    href={null}
    to={null}
  >
    Some content
  </a>,
  "wrapper": .c0:focus {
  outline: auto 5px -webkit-focus-ring-color;
}

.c0:link,
.c0:visited {
  color: #2a2c2e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:link,
.c0:visited {
  color: #fff;
}

.c0:active {
  color: #d8d8d8;
  background-color: rgba(0,0,0,0.4);
  border-radius: 0.25rem;
  padding: 0.125rem;
  margin: -0.125rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  border: 0.125rem solid #fff;
  padding: 0.125rem;
  margin: -0.25rem;
  border-radius: 0.25rem;
  outline: none;
}

<WithForwardedRef(Link)
    invert={true}
  >
    <Link
      forwardedRef={null}
      href={null}
      iconPosition="left"
      invert={true}
      reactRouterLinkComponent={null}
      to={null}
    >
      <Link__StyledLink
        as="a"
        context={
          Object {
            "inheritColor": undefined,
          }
        }
        hasIcon={false}
        href={null}
        invert={true}
        to={null}
      >
        <StyledComponent
          as="a"
          context={
            Object {
              "inheritColor": undefined,
            }
          }
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "Link__StyledLink-sc-1bokult-0",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  ":focus {",
                  "outline: auto 5px -webkit-focus-ring-color;",
                  "}",
                  "&:link,&:visited {",
                  "color: #2a2c2e;",
                  "text-decoration: underline;",
                  "}",
                  "&:hover {",
                  "text-decoration: none;",
                  "}",
                  "& svg {",
                  "}",
                  [Function],
                  [Function],
                  [Function],
                ],
              },
              "displayName": "Link__StyledLink",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "Link__StyledLink-sc-1bokult-0",
              "target": "a",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          hasIcon={false}
          href={null}
          invert={true}
          to={null}
        >
          <a
            className="c0"
            href={null}
            to={null}
          >
            Some content
          </a>
        </StyledComponent>
      </Link__StyledLink>
    </Link>
  </WithForwardedRef(Link)>,
}
`;

exports[`Link renders 1`] = `
<Link
  forwardedRef={null}
  href={null}
  iconPosition="left"
  reactRouterLinkComponent={null}
  to={null}
>
  Go home
</Link>
`;
